--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,5 +14,11 @@ AllCops:
 Layout/LineLength:
   Max: 120
 
+Style/ClassAndModuleChildren:
+  Enabled: false
+
 Style/Documentation:
   Enabled: false
+
+Style/EmptyMethod:
+  EnforcedStyle: expanded
